[package]
name = "zircon"
version = "0.1.1"
authors = [
    "mayah <mayah@mayah.jp>",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/mayah/zircon.rs"
readme = "README.md"
keywords = ["web"]
description = "web application framework on tokio-based hyper"

[dependencies]
cookie = { version = "0.8", features = ["secure"] }
futures = "0.1"
futures-cpupool = "0.1"
handlebars = "0.26"
hyper = "0.11"
log = "0.3"
mime = "0.2"
net2 = "0.2"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
typemap = "0.3"
url = "1.4"
walkdir = "1.0"

[dev-dependencies]
getopts = "0.2"
